# bazel-scratch-repo

./: .bazelrc  .gitignore  README.md  WORKSPACE
bazel_deps/: BUILD.bazel  generate.sh
scala/: dependencies.yaml
scala/app/: BUILD.bazel
scala/app/src/main/scala/: Main.scala
