load("@io_bazel_rules_scala//scala:scala.bzl", "scala_binary", "scala_library")
load("//scala/build:scalac_opts.bzl", "SCALAC_OPTS")

scala_library(
    name = "app",
    srcs = glob(["src/main/scala/**/*.scala"]),
    main_class = "com.github.gannicottb.app.Main",
    plugins = [],
    resources = glob(["src/main/resources/*"]),
    scalacopts = SCALAC_OPTS,
    unused_dependency_checker_mode = "error",
    visibility = [
        "//visibility:public",
    ],
    runtime_deps = [
        "@maven//:ch_qos_logback_logback_classic",
    ],
    deps = [
        "@maven//:com_typesafe_scala_logging_scala_logging_2_12",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

scala_binary(
    name = "bin",
    main_class = "com.github.gannicottb.app.Main",
    deps = [
        ":app",
    ],
)
